spacing fixes

--- a/scss/_breaks.scss
+++ b/scss/_breaks.scss
@@ -138,7 +138,7 @@
 					-webkit-box-direction: normal;
 					    -ms-flex-direction: column;
 					        flex-direction: column;
-					margin-bottom: 1rem;
+					margin-bottom: 0;
 					
 					.contact_content{
 						width: 100%;
@@ -163,6 +163,7 @@
 						height: 10vh;
 						text-align: left;
 						margin-bottom: 1rem;
+						padding-top: 1rem;
 					}
 					.footer_close {
 						display: none;
@@ -175,6 +176,9 @@
 							li {
 								text-align: left;
 								a {
+									.fa {
+										margin-top: 25%;
+									}
 									h3 {
 										display: none;
 									}
